--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,19 @@
   </head>
   <body>
     <div class="container">
+      <code>
+        <pre>
+ ________________________________________ 
+/ There are two ways to write error-free \
+\ programs; only the third one works.    /
+ ---------------------------------------- 
+        \   ^__^
+         \  (oo)\_______
+            (__)\       )\/\
+                ||----w |
+                ||     ||
+        </pre>
+      </code>
     </div>
   </body>
 </html>
